--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,8 +17,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: |
-        github.com/gopxl/pixel
-        github.com/tarm/serial
+        go get github.com/gopxl/pixel
+        go get github.com/tarm/serial
 
     - name: Set up Go
       uses: actions/setup-go@v4
