--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: |
-        cd monitor && go get github.com/gopxl/pixel && go get github.com/tarm/serial
+        cd monitor && go get .
 
     - name: Set up Go
       uses: actions/setup-go@v4
@@ -26,4 +26,4 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: go build -o ./monitor.out -v monitor/.
+      run: cd monitor && go build -o ./monitor.out .
